import "PublicStruct.proto";

//副本相关信息
message  DungeonDungeonInfoV1
{
	optional string DungeonKey = 1;	//Key
	optional sint32 DungeonId = 2[default=-1];	//副本ID
	optional sint32 DungeonType = 3[default=-1];	//副本类型
	optional sint32 KeyId = 4[default=-1];	//KeyId
	optional string Host = 5;	//Host
	optional sint32 Port = 6[default=-1];	//Port
	optional sint32 Guild = 7[default=-1];	//帮派Id
}

